@@ -1,3 +1,7 @@
+2014-03-17  Konrad Polys, Krzysztof Grochla
+
+	Added: Stanford University Interim propagation model.
+
 2013-05-03  Alfonso Ariza
 
 	radio: free space model distance calculation added
